<resources>
    <string name="app_name">FireAuth</string>
    <string name="sing_in_now">Sing In Now</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="or">Or</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="back_layout">Back layout</string>
    <string name="create_account">Create Account</string>

    <string name="facebook_app_id">1410577806347214</string>
    <string name="fb_login_protocol_scheme">fb1410577806347214</string>
    <string name="facebook_client_token">56789</string>

</resources>