<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.SignIn">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/ellipseTop"
                android:layout_width="match_parent"
                android:layout_height="238dp"
                android:layout_alignParentTop="true"
                android:layout_marginStart="-10dp"
                android:layout_marginTop="-131dp"
                android:layout_marginEnd="-10dp"
                android:background="@drawable/ellipse"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iconApp"
                android:layout_width="124dp"
                android:layout_height="124dp"
                android:layout_marginTop="-80dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/icon_app"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ellipseTop" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iconApp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:text="@string/sing_in_now"
                    android:textSize="23sp"
                    android:textStyle="bold" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:autofillHints="emailAddress"
                    android:background="@drawable/edit_text_background"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/roboto_condensed_light"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textColor="@color/tuna"
                    android:textColorHint="@color/tuna" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:autofillHints="@null"
                    android:background="@drawable/edit_text_background"
                    android:drawableStart="@drawable/ic_password"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/roboto_condensed_light"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="@color/tuna"
                    android:textColorHint="@color/tuna" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/signUpButton"
                        android:layout_width="0dp"
                        android:layout_height="55dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/tuna"
                        android:text="@string/sign_up"
                        app:cornerRadius="10dp" />

                    <com.google.android.material.button.MaterialButton
                        android:layout_width="0dp"
                        android:layout_height="55dp"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/sunglow"
                        android:text="@string/sign_in"
                        app:cornerRadius="10dp" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/roboto_condensed_light"
                    android:text="@string/or"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <androidx.cardview.widget.CardView
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_margin="10dp"
                        android:backgroundTint="@color/azure"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?attr/selectableItemBackground"
                        app:cardCornerRadius="15dp">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/facebook"
                            android:src="@drawable/ic_facebook" />

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_margin="10dp"
                        android:backgroundTint="@color/white"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?attr/selectableItemBackground"
                        app:cardCornerRadius="15dp">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/google"
                            android:src="@drawable/ic_google" />

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>